@startuml

class EventCategory{
    id : Long
    name : String
    + get(id)
    + getAll()
    + post()
    + put(id)
    + delete(id)
}

class Event{
    id : Long
    title : String
    eventInfo : EventInfo
    image : Picture
    startDateTime : DateTime
    endDateTime : DateTime
    eventLocation : EventLocation
    category : EventCategory
    isEditable : Boolean
    + get(id)
    + getAll()
    + post()
    + put(id)
    + delete(id)
}

class EventInfo{
    id : Long
    infoText : String
    pictures : List<Picture>
    + get(id)
    - post()
    - put(id)
    - delete(id)
}

class Picture{
    id : Long
    title : String
    path : String
    + get(id)
    + getBasePath()
    + get(searchString)
    + post()
    + delete(name)
    + delete(id)

}

class EventLocation{
    id : Long
    name : String
    + get(id)
    + getAll()
    + post()
    + put(id)
    + delete(id)
}

class Vote{
    votingId : Long
    eventId : Long
    deviceId : String
    + post()
}

class Voting{
    id : Long
    title : String
    isActive : Boolean
    isEditable : Boolean
    events : List<Event>
    eventCategoryId : Long
    image : Picture
    votingResult : VotingResult
    + get(id)
    + getAll()
    + post()
    + put(id)
    + delete(id)
}

class VotingResult {
    id : Long
    title : String
    endDate : DateTime
    partialResults : List<VotingPartialResult>
    + get(id)
    +getAll()
    +delete(id)
    - post()
}

class VotingPartialResult {
    id : Long
    eventName : String
    percentage : double
    - post()
}

note "do not delete VotingResult if Voting gets deleted" as N7
note "if voting result gets deleted, delete associated voting" as N6
note "path is only in the dto not the entity" as N5
note "isActive can only be set to true if no votes exist for this Voting" as N4
note "VotingResult is created after a Voting has endet with more than a vote" as N3
note "coming fom frontend" as N1

Event::image -- Picture
Event::eventLocation -- EventLocation
Event::category -- EventCategory
Event::eventInfo -- EventInfo
EventInfo::pictures -- Picture
Vote::userId -- N1
Voting::eventCategoryId -- EventCategory::id
Voting::votingId -- Vote
Voting::isActive -- N4
Voting::events -- Event
Voting::image -- Picture
Voting::votingResult -- VotingResult
Picture::path -- N5
VotingResult::partialResults -- VotingPartialResult
VotingResult -- N3
VotingResult -- N6
VotingResult -- N7






@enduml